--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,3 @@
 title: "Adarsh Tripathi"
-name: "Adarsh Tripathi"
 description: "Official academic website of Adarsh Tripathi"
-url: "https://adarsht27.github.io"
-remote_theme: "mmistakes/minimal-mistakes@4.24.0"
-
-# Social
-author:
-  name   : "Adarsh Tripathi"
-  avatar : "/assets/images/your-photo.jpg"
-  links:
-    - label: "LinkedIn"
-      icon: "fab fa-linkedin"
-      url: "https://www.linkedin.com/in/adarsht/"
-    - label: "Email"
-      icon: "fas fa-envelope"
-      url: "mailto:ad.tripathi@students.hertie-school.org"
-
-# Navigation
-nav:
-  - title: "About"
-    url: "/"
-  - title: "Projects"
-    url: "/projects/"
-  - title: "Publications"
-    url: "/publications/"
+theme: jekyll-theme-cayman
