--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: "Adarsh Tripathi"
 description: "Official academic website of Adarsh Tripathi"
-theme: jekyll-theme-cayman
+theme: jekyll-theme-modernist
