--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: "Adarsh Tripathi"
-description: "Official academic website of Adarsh Tripathi"
+description: "Sharing my learning journey to code"
 theme: jekyll-theme-slate
