--- a/_config.yml
+++ b/_config.yml
@@ -1,71 +1,22 @@
-lang:                  en
-title:                 Adarsh T
-copyright:             © 2025. All rights reserved.
+title: "Adarsh Tripathi"
+email: "ad.tripathi@students.hertie-school.org"
+description: >-
+  Official academic website of Adarsh Tripathi.
+baseurl: "" # leave empty for user/organization site
+url: "https://adarsht27.github.io"
+author: "Adarsh Tripathi"
+avatar: "/assets/img/avatar.jpg"
 
-accent_image:          /assets/img/sidebar-bg.jpg
-accent_color:          rgb(79,177,186)
-theme_color:           rgb(25,55,71)
-
-google_fonts:          false
-
+# Hydejack-specific settings
 hydejack:
-  post_addons:         [about, newsletter, related, random, comments]
-  project_addons:      [about, newsletter, other, comments]
+  social:
+    github: "adarsht27"
+    linkedin: "adarsht"
+    email: "ad.tripathi@students.hertie-school.org"
 
-  no_mark_external:    false
-  no_push_state:       false
-  no_drawer:           false
-  no_navbar:           false
-  no_search:           false
-  no_inline_css:       false
-  no_page_style:       false
-  no_break_layout:     true
-  no_toc:              false
-  no_third_column:     false
-  no_large_headings:   false
-  no_structured_data:  false
-  no_theme_color:      false
-  no_breadcrumbs:      false
-
-  use_lsi:             true
-  cookies_banner:      true
-  advertise:           true
-  hide_dates:          false
-  hide_last_modified:  false
-
-  dark_mode:
-    always:            false
-    dynamic:           true
-    sunrise:           6
-    sunset:            18
-    icon:              true
-
-  offline:
-    enabled:           false
-    cache_version:     1
-    precache_assets:
-      - /assets/img/swipe.svg
-
-optional_front_matter:
-  remove_originals:    true
-
-readme_index:
-  remove_originals:    true
-  with_frontmatter:    true
-
-relative_links:
-  collections:         true
-
-titles_from_headings:
-  strip_title:         true
-  collections:         true
-
-compress_html:
-  comments:            ["<!-- ", " -->"]
-  clippings:           all
-  endings:             all
-  ignore:
-    envs:              [development]
-
-sass:
-  style:               compressed
+# Build settings (leave as is for now)
+markdown: kramdown
+theme: null
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
